--- a/src/main/resources/templates/vacancy-edit-form.html
+++ b/src/main/resources/templates/vacancy-edit-form.html
@@ -18,6 +18,6 @@
     <button type="submit">Зберегти зміни</button>
   </form>
 
-  <a th:href="@{'/profile-employer'}">Назад до списку</a>
+  <a href="/profile-employer">Назад до списку</a>
 </body>
 </html>
